--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "0.1.0",
   "license": "MIT",
   "private": true,
-  "proxy": "http://localhost:8075",
-  "homepage": "https://weblab.nees.com.br/breno",
-  "basename": "/breno",
+  "homepage": "https://weblab.nees.com.br/heterobreno",
+  "basename": "/heterobreno",
   "engines" : { 
     "npm" : ">=8.8.0",
     "node" : "14.x"
